--- a/RBIEtemplate.tex
+++ b/RBIEtemplate.tex
@@ -55,7 +55,8 @@ Last author’s surname et al. (for more than 2 authors)
 \citeas{Last name, Initials., \ldots \& Last name, Initials.  (Year). Article title (título em português). Brazilian Journal of Computers in Education (Revista Brasileira de Informática na Educação -- RBIE), vol(num), pp-pp. DOI: 10.5753/RBIE.yyyy.vol.num.pp}
 
 %====================================================================
-\hyphenpenalty=10000
+% \hyphenpenalty=10000
+\hyphenation{op-tical net-works semi-conduc-tor}
 \begin{document}
 \maketitle
 
@@ -136,7 +137,7 @@ The heading of a sub subsection title should be in 12-point italic with initial 
 
 
 \subsection{Tables}
-Tables (e.g., Table~\ref{tab:one}) must be positioned preferably at the top or bottom of the page within the given margins. Avoid breaking tables on different pages, unless it does not fit one page only. Tables should be properly numbered, centered and should always have a caption positioned above it. Captions should be centered with 9-point Times, with 12-point spacing before and 6-point after. The final sentence of a caption must end with a period.
+Tables (e.g.,~\autoref{tab:one}) must be positioned preferably at the top or bottom of the page within the given margins. Avoid breaking tables on different pages, unless it does not fit one page only. Tables should be properly numbered, centered and should always have a caption positioned above it. Captions should be centered with 9-point Times, with 12-point spacing before and 6-point after. The final sentence of a caption must end with a period.
 
 Table text should be 10-point Times, with no spacing before or after.
 
@@ -157,7 +158,7 @@ Table text should be 10-point Times, with no spacing before or after.
 \subsection{Figures}
 Figures should be produced electronically and integrated into the document. As they may lose quality when integrated into the document, it is important to check if it is with a good resolution (at least 300 dpi is recommended). Check line drawings, grids and details within the figures that must be clearly readable and may not be written one on top of the other, considering 100% view and print version.
 
-Figures (e.g., Figure~\ref{fig:one}) must appear inside the designated margins. They should be properly numbered, centered and should always have a caption positioned under it. Captions should be centered, with 9-point font size. Spacing before and after should be of 6-point and 12-point, respectively.
+Figures (e.g.,~\autoref{fig:one}) must appear inside the designated margins. They should be properly numbered, centered and should always have a caption positioned under it. Captions should be centered, with 9-point font size. Spacing before and after should be of 6-point and 12-point, respectively.
 
 The final sentence of a caption must end with a period. 
 
@@ -169,7 +170,7 @@ The final sentence of a caption must end with a period.
 
 
 \subsection{Equations}
-Special attention with equations as some characters may be lost as well as formatting. Equations (e.g., Equation~\ref{eq:one}) should be placed on a separate line, numbered and centered. An extra line space should be added below the equation. The numbers accorded to equations must appear enclosed in brackets and positioned right side (with some space after the equation).
+Special attention with equations as some characters may be lost as well as formatting. Equations (e.g.,~\autoref{eq:one}) should be placed on a separate line, numbered and centered. An extra line space should be added below the equation. The numbers accorded to equations must appear enclosed in brackets and positioned right side (with some space after the equation).
 The use of a table with two columns is advisable.
 
 \begin{equation}
@@ -179,7 +180,7 @@ The use of a table with two columns is advisable.
 
 
 \subsection{Program Code}
-Program listing commands in text (e.g., Code~\ref{code:one}) should be set in 9-point Courier New, with no spacing before or after, and no first line indent. Codes must appear inside the designated margins, with external borders and they should be properly numbered. Captions should be centered, with 9-point font size. Spacing before and after should be of 6-point and 12-point, respectively.
+Program listing commands in text (e.g.,~\autoref{code:one}) should be set in 9-point Courier New, with no spacing before or after, and no first line indent. Codes must appear inside the designated margins, with external borders and they should be properly numbered. Captions should be centered, with 9-point font size. Spacing before and after should be of 6-point and 12-point, respectively.
 
 \begin{code}[h]
 	\begin{lstlisting}
